# offline-rl

./: .gitignore  Makefile  README.md  pyproject.toml
assets/: offline-rl-summary.md
configs/: eval.yaml  generate_dataset.yaml  sweep.yaml  train.yaml
configs/dataset/: large_PD1M.yaml  large_random100M_1k.yaml  large_random100k.yaml  large_random10M.yaml  large_random10M_1k.yaml  large_random10M_5k.yaml  large_random1M.yaml  large_random1M_5k.yaml  large_random1M_PD1M.yaml  large_random1M_dense.yaml  medium_PD1M.yaml  medium_PD1M_wall.yaml  medium_random100k.yaml  medium_random10M.yaml  medium_random1M.yaml  medium_random1M_wall.yaml  open_PD1M.yaml  open_PD1M_wall.yaml  open_random10M.yaml  open_random1M.yaml  open_random1M_wall.yaml  random.yaml  random100k.yaml  u_PD1M.yaml  u_PD1M_wall.yaml  u_random100k.yaml  u_random10M.yaml  u_random1M.yaml  u_random1M_wall.yaml
configs/env/: pointmaze_large.yaml  pointmaze_large_dense.yaml  pointmaze_medium.yaml  pointmaze_open.yaml
configs/eval/: default.yaml
configs/logging/: wandb.yaml
configs/model/: dense_cql.yaml  dense_iql.yaml
configs/train/: default.yaml  iql_random.yaml
scripts/: common.mk  convert_existing_dataset.py  crop.py  eval.py  generate_dataset.py  train.py  train_iql.py
scripts/visualize/: point_maze.py  point_maze_dataset.py  point_maze_value_fuction.py
src/offline_rl/: __init__.py  replay_buffer.py
src/offline_rl/env/: point_maze_wall_wrapper.py
src/offline_rl/nn/: iql.py
test/env/: test_point_maze_wall_wrapper.py
