[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "offline_rl"
version = "0.1.0"
description = "Train optimal policies from suboptimal (random) trajectories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "torch>=2.6.0",
]
