[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "offline_rl"
version = "0.1.0"
description = "Train optimal policies from suboptimal (random) trajectories"
readme = "README.md"
requires-python = "==3.9"
dependencies = [
    "cython==0.29.36",
    "gymnasium>=1.1.1",
    "gymnasium-robotics>=1.3.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.4",
    "minari[all]>=0.5.2",
    "mujoco>=3.1.6",
    "pytest>=8.3.5",
    "tensordict>=0.5.0",
    "torch>=2.4.1",
    "torchrl>=0.5.0",
    "wandb>=0.19.9",
]
